# blockchain-formation

./: .gitignore  BaseConvertionToDecimal.hs  Guards.hs.hs  InputOutput.hs  ParserCombinator.hs  ParserExercises.hs  README.md  cours.hs  encoding_decoding_data_function.hs  exercicesFunctor.hs  exercisesMonoid.hs  exo7.txt  fichier1.txt  fichier2.txt  semiGroup.hs  test.hs  testModule.txt  testyannick.hs  tp_basic_type.hs  tp_credit_card_validation.hs  tp_higher_order function.hs  tp_readAFile.hs  tp_split_function.hs
IAM/: IAM.cabal  README.md  SaveOperateur.txt  package.yaml
IAM/app/: Main.hs
IAM/src/: SaveOperateur.txt
LaboNotification/: CHANGELOG.md  LaboNotification.cabal  README.md  package.yaml  stack.yaml
LaboNotification/.stack-work/: stack.sqlite3
LaboNotification/app/: Main.hs
Tontine/: CHANGELOG.md  README.md  Tontine.cabal  cabal.project  test.html
Tontine/app/: TontineContract.hs
Tontine/assets/: cotisation1-datum.json  redeemClose.json  redeemOpen.json  redeemPay.json  redeemTontine.json  signed-tontine.plutus  smart-contract-v0.1.plutus  statut-tontine-datum.json  tontine-smart-contract-v0.1.plutus
Tontine/keys/: beneficiaire.addr  beneficiaire.skey  beneficiaire.vkey  script.addr  secretaire-wallet.addr  secretaire.skey  secretaire.vkey  tontinard1-wallet.addr  tontinard1.skey  tontinard1.vkey  tontinard2-wallet.addr  tontinard2.skey  tontinard2.vkey  tontine-wallet.addr  tresorerie-wallet.addr  tresorerie.pkh  tresorerie.skey  tresorerie.vkey  tx-signed  tx-unsigned  tx1-signed  tx1-unsigned  tx11-signed  tx11-unsigned  tx2-signed  tx2-unsigned  tx3-signed  tx3-unsigned  tx4-signed  tx4-unsigned  tx5-signed  tx5-unsigned  tx6-signed  tx6-unsigned  tx7-signed  tx7-unsigned  tx8-signed  tx8-unsigned  tx9-signed  tx9-unsigned  (+2 more)
Tontine/lucid/: index.html
Tontine/public/: index.html
Tontine/public/css/: index.css
Tontine/public/js/: index.js  menu.js
Tontine/tontine-lucid/: package-lock.json  package.json  seed.js  seed.ts  tontine-offchain-params.js  tontine-offchain-params.ts  tontine-offchain.ts
api/: api.cabal  package.yaml
api/.stack-work/: stack.sqlite3
api/src/: Lib.hs
databases/: CHANGELOG.md  README.md  databases.cabal  package.yaml  stack.yaml
databases/.stack-work/: stack.sqlite3
gestionConference/: CHANGELOG.md  README.md  gestionConference.cabal  package.yaml
helloworld/: stack.yaml
queue/: CHANGELOG.md  package.yaml  queue.cabal
smart-contract/: CHANGELOG.md  README.md  smart-contract.cabal
smart-contract/app/: Main.hs
smart-contract/lucid/: index.html
(+41 files in other folders)
