cabal-version:      2.4
name:               Tontine
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ntet2001
maintainer:         manyamaigor2001@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Tontine
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    TontineContract

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
